# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_a/liteos.gni")

module_switch = defined(LOSCFG_FS_JFFS)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "src/jffs2_hash.c",
    "src/vfs_jffs2.c",
  ]

  sources += [
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/background.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/build.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/compr.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/compr_rtime.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/compr_rubin.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/compr_zlib.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/debug.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/dir.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/erase.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/file.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/fs.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/gc.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/malloc.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/nodelist.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/nodemgmt.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/read.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/readinode.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/scan.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/summary.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/super.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/write.c",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2/writev.c",
  ]

  include_dirs = [
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs/jffs2",
    "$LITEOSTHIRDPARTY/Linux_Kernel/fs",
  ]

  public_configs = [ ":public" ]
}

config("public") {
  include_dirs = [ "include" ]
}
