# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_a/liteos.gni")
import("//third_party/NuttX/NuttX.gni")

module_switch = defined(LOSCFG_FS_VFS)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "$LITEOSTOPDIR/fs/vfs/epoll/fs_epoll.c",
    "$LITEOSTOPDIR/fs/vfs/mount.c",
    "$LITEOSTOPDIR/fs/vfs/path_cache.c",
    "$LITEOSTOPDIR/fs/vfs/vnode.c",
    "$LITEOSTOPDIR/fs/vfs/vnode_hash.c",
    "operation/fullpath.c",
    "operation/vfs_chattr.c",
    "operation/vfs_check.c",
    "operation/vfs_cloexec.c",
    "operation/vfs_fallocate.c",
    "operation/vfs_fallocate64.c",
    "operation/vfs_fcntl.c",
    "operation/vfs_force_umount.c",
    "operation/vfs_init.c",
    "operation/vfs_other.c",
    "operation/vfs_preadv.c",
    "operation/vfs_procfd.c",
    "operation/vfs_pwritev.c",
    "operation/vfs_readv.c",
    "operation/vfs_utime.c",
    "operation/vfs_writev.c",
    "vfs_cmd/vfs_shellcmd.c",
  ]
  sources += NUTTX_FS_DIRENT_SRC_FILES
  sources += NUTTX_FS_DRIVER_SRC_FILES
  sources += NUTTX_FS_INODE_SRC_FILES
  sources += NUTTX_FS_MOUNT_SRC_FILES
  sources += NUTTX_FS_VFS_SRC_FILES

  include_dirs = [
    "$LITEOSTOPDIR/syscall",
    "$LITEOSTOPDIR/fs/zpfs/include",
  ]
  public_configs = [ ":public" ]
}

config("public") {
  include_dirs = [ "include" ]
}
